welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:5: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if(n>=1&&n<=10){return true}} 
         ^